# delta

./: .gitignore  Cargo.toml  README.md  run  setup
.github/workflows/: ci.yml
.toolbox/: rust-analyzer.sh  toolbox.sh
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: call_page.ui  crashed_page.ui  listening_overlay.ui  peer_marker.ui  settings_view.ui  window.ui
src/: application.rs  audio_device.rs  audio_stream.rs  backend.rs  call.rs  client.rs  colors.rs  config.rs  crash_detector.rs  gps.rs  input_stream.rs  led.rs  location.rs  main.rs  output_stream.rs  peer.rs  peer_list.rs  place_finder.rs  remote.rs  settings.rs  stt.rs  tts.rs  utils.rs  wireless_info.rs
src/ui/: alert_marker.rs  call_page.rs  call_page.ui  crashed_page.rs  crashed_page.ui  listening_overlay.rs  listening_page.rs  listening_page.ui  map_view.rs  map_view.ui  mod.rs  peer_marker.rs  peer_marker.ui  peer_row.rs  peer_row.ui  place_marker.rs  place_marker.ui  place_page.rs  place_page.ui  settings_view.rs  settings_view.ui  toggle_button.rs  window.rs  window.ui
subproject/remote/: remote.ino
