[package]
name = "delta"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { package = "libadwaita", version = "0.6", features = ["v1_2"] }
anyhow = "1.0.82"
async-channel = "2.2.1"
async-std = "1.12.0"
futures-channel = "0.3.30"
futures-util = "0.3.30"
gst = { package = "gstreamer", version = "0.22", features = ["v1_22"] }
gtk = { package = "gtk4", version = "0.8.1", features = ["gnome_43"] }
gvdb = { version = "0.6.1", features = ["gresource"] }
indexmap = "2.2.6"
libp2p = { version = "0.53.2", features = [
    "async-std",
    "gossipsub",
    "macros",
    "mdns",
    "quic",
    "serde",
] }
libp2p-stream = "0.1.0-alpha"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
